# k-means-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  changelog  codecov.yml  main.cpp
.circleci/: config.yml
cmake/modules/: CodeCoverage.cmake
include/: catch.hpp
include/algorithm/: distance_interface.h  jaro_winkler.h
include/kmeans/: cluster.h  k_medoids.h  kmeans_interface.h  matrix.h
include/utility/: output_writer.h  parser_interface.h  text_parser.h
source/algorithm/: jaro_winkler.cpp
source/kmeans/: cluster.cpp  k_medoids.cpp  matrix.cpp
source/utility/: output_writer.cpp  text_parser.cpp
test/: test_main.cpp
test/algorithm/: jaro_winkler_test.cpp
test/input/: test_file.txt
test/kmeans/: cluster_test.cpp  k_medoids_test.cpp  matrix_test.cpp
test/utility/: output_writer_test.cpp  text_parser_test.cpp
